--- a/html-test/index.html
+++ b/html-test/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<html>
-<body style="background-color:#080818;padding-left:10%;padding-right:10%;padding-top:5%">
+<html lang="en">
+<head>
 <title>Derek OK9SGC</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {
   color: white;
@@ -35,6 +35,8 @@ a:active {
   text-decoration: underline;
 }
 </style> 
+</head>
+<body style="background-color:#080818;padding-left:10%;padding-right:10%;padding-top:5%">
 
 <h1 style="color:#c0ce43;">Derek OK9SGC</h1>
 
@@ -46,7 +48,7 @@ a:active {
 
 <h2 style="color:#c0ce43;">Blog articles</h2>
 
-<p style="text-align: center;line-height: 1.8;"><a href="https://sgcderek.github.io/posts/meridian-tv/">Analog UHF TV DXing using a Russian military satellite</a><br /><a href="https://sgcderek.github.io/posts/kgstv-reception/">How to receive and decode KG-STV image transmissions</a><br /><a href="https://sgcderek.github.io/posts/beginner-hrpt-guide/">Beginner's guide to HRPT reception</a><br /><a href="https://sgcderek.github.io/posts/lnb-high-band-mod/">Hard-wiring an LNB to use the high band 10.6 GHz oscillator</a><br /><a href="https://sgcderek.github.io/posts/starlink-beacons/">Receiving Starlink satellite beacons on a budget</a><br /><a href="https://sgcderek.github.io/posts/noaa2-revival/">NOAA-2 returning from the dead</a></p>
+<p style="text-align: center;"><a href="https://sgcderek.github.io/posts/meridian-tv/">Analog UHF TV DXing using a Russian military satellite</a><br /><a href="https://sgcderek.github.io/posts/kgstv-reception/">How to receive and decode KG-STV image transmissions</a><br /><a href="https://sgcderek.github.io/posts/beginner-hrpt-guide/">Beginner's guide to HRPT reception</a><br /><a href="https://sgcderek.github.io/posts/lnb-high-band-mod/">Hard-wiring an LNB to use the high band 10.6 GHz oscillator</a><br /><a href="https://sgcderek.github.io/posts/starlink-beacons/">Receiving Starlink satellite beacons on a budget</a><br /><a href="https://sgcderek.github.io/posts/noaa2-revival/">NOAA-2 returning from the dead</a></p>
 
 </body>
 </html>
