--- a/html-test/index.html
+++ b/html-test/index.html
@@ -4,6 +4,11 @@
 <title>Derek OK9SGC</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
+@font-face {
+  font-family: 'MyWebFont';
+  src: url('M1font_small.ttf')  format('truetype');
+}
+
 <style>
 * {
   color: white;
