--- a/html-test/index.html
+++ b/html-test/index.html
@@ -14,6 +14,7 @@
   background-color: transparent;
   text-decoration: none;
   text-align: center;
+  font-family: MyWebFont;
 }
 a:link {
   color: #7199ea;
