--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
 @font-face {
   font-family: 'MyWebFont';
-  src: url('https://sgcderek.github.io/html-test/M1font_small.ttf')  format('truetype');
+  src: url('M1font_small.ttf')  format('truetype');
 }
 * {
   color: white;
