--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 <style>
 @font-face {
   font-family: 'MyWebFont';
-  src: url('M1font_small.ttf')  format('truetype');
+  src: url('https://sgcderek.github.io/M1font_small.ttf')  format('truetype');
 }
 * {
   color: white;
@@ -47,6 +47,6 @@ a:active {
 
 <p>The page you are looking for does not exist.</p>
 <p>It might have been renamed or moved - check that your URL is correct.</p>
-<p>If you followed an external link that doesn't work anymore, go to the <a href="index.html">home page</a> and see if you can find what you are looking for.</p>
+<p>If you followed an external link that doesn't work anymore, go to the <a href="https://sgcderek.github.io/">home page</a> and see if you can find what you are looking for.</p>
 </body>
 </html>
