--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@ a:active {
 
 <p><a href="https://twitter.com/dereksgc" target="_blank">Twitter</a> - <a href="https://mas.to/web/@dereksgc" target="_blank">Mastodon</a> - <a href="https://www.youtube.com/channel/UCSHVnVnUErLxEU1mfWM3EBw" target="_blank">YouTube</a> - <a href="https://github.com/sgcderek" target="_blank">GitHub</a> - <a href="https://www.thingiverse.com/derekcz/designs" target="_blank">Thingiverse</a></p>
 
+<p>If you would like to support me and what I do, consider visiting my <a href="https://ko-fi.com/dereksgc" target="_blank">Ko-fi</a> page. Anything helps. Special thanks to;<br>
+<i>microp11 - thebaldgeek - yakko warner - @BackHive - hmdsamarasekara - Nautiluscl - Martin HB9FXX - Xerbo - Pablo de la Fuente</i></p>
+
 <hr class="solid">
 
 <h2 style="color:#c0ce43;">Blog articles</h2>
