--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ a:active {
 
 <p>If you would like to support me and what I do, consider visiting my <a href="https://ko-fi.com/dereksgc" target="_blank">Ko-fi</a> page. Anything helps. Special thanks to;</p>
 
-<p><span style="color: #00994d;">microp11 - thebaldgeek - Xerbo - yakko warner - @BackHive - hmdsamarasekara - Nautiluscl - Martin HB9FXX - Pablo de la Fuente</span></p>
+<p><span style="color: #00994d;">microp11 - thebaldgeek - Xerbo - yakko warner - @BackHive - hmdsamarasekara - Nautiluscl - Martin HB9FXX - KentuckyFriedData - Pablo de la Fuente</span></p>
 
 <hr class="solid">
 
