Added helix calculator

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@ a:active {
 
 <hr class="solid">
 
+<p style="text-align: center;center;line-height: 1.8;">
+<a href="tools/helix-calc.html">Helical antenna calculator</a></p>
+
+<hr class="solid">
+
 <h2 style="color:#c0ce43;">Blog articles</h2>
 
 <p style="text-align: center;center;line-height: 1.8;">
