Replaced placeholder values with real ones

--- a/tools/helix-calc.html
+++ b/tools/helix-calc.html
@@ -167,7 +167,7 @@ function calculate(form) {
 <tr>
 <td>F</td>
 <td>user input</td>
-<td><input id="inputMHz" type="number" size=10 placeholder="1700"></td>
+<td><input id="inputMHz" type="number" size=10 value="1700"></td>
 <td>MHz</td>
 <td>Operating frequency</td>
 </tr>
@@ -175,7 +175,7 @@ function calculate(form) {
 <tr>
 <td>S<sub>λ</sub></td>
 <td>user input</td>
-<td><input id="inputSpacing" type="number" size=10 placeholder="0.2"></td>
+<td><input id="inputSpacing" type="number" size=10 value="0.2"></td>
 <td>λ</td>
 <td>Spacing between turns</td>
 </tr>
@@ -183,7 +183,7 @@ function calculate(form) {
 <tr>
 <td>n</td>
 <td>user input</td>
-<td><input id="inputTurns" type="number" size=10 placeholder="5"></td>
+<td><input id="inputTurns" type="number" size=10 value="5"></td>
 <td></td>
 <td>Number of turns</td>
 </tr>
