Use a more readable font

--- a/404.html
+++ b/404.html
@@ -6,15 +6,15 @@
 <meta charset="UTF-8">
 <style>
 @font-face {
-  font-family: 'MyWebFont';
-  src: url('https://sgcderek.github.io/M1font_small.ttf')  format('truetype');
+  font-family: 'Play';
+  src: url('https://sgcderek.github.io/fonts/Play/Play-Regular.ttf')  format('truetype');
 }
 * {
   color: white;
   background-color: transparent;
   text-decoration: none;
   text-align: center;
-  font-family: MyWebFont;
+  font-family: Play;
 }
 a:link {
   color: #7199ea;
