--- a/tools/helix-calc.html
+++ b/tools/helix-calc.html
@@ -6,15 +6,15 @@
 <meta charset="UTF-8">
 <style>
 @font-face {
-  font-family: 'MyWebFont';
-  src: url('../M1font_small.ttf')  format('truetype');
+  font-family: 'Play';
+  src: url('../fonts/Play/Play-Regular.ttf')  format('truetype');
 }
 * {
   color: white;
   background-color: transparent;
   text-decoration: none;
   text-align: left;
-  font-family: MyWebFont;
+  font-family: Play;
 }
 a:link {
   color: #7199ea;
@@ -162,7 +162,7 @@ function calculate(form) {
 </script>
 
 <form method="POST" name="Values">
-<table border="1" style='font-size:120%'>
+<table border="1">
 
 <tr>
 <td>F</td>
