--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 <meta charset="UTF-8">
 <style>
 @font-face {
-  font-family: 'MyWebFont';
-  src: url('M1font_small.ttf')  format('truetype');
+  font-family: 'Play';
+  src: url('fonts/Play/Play-Regular.ttf')  format('truetype');
 }
 * {
   color: white;
   background-color: transparent;
   text-decoration: none;
   text-align: center;
-  font-family: MyWebFont;
+  font-family: Play;
 }
 a:link {
   color: #7199ea;
