Removed leftover debug value

--- a/tools/helix-calc.html
+++ b/tools/helix-calc.html
@@ -293,7 +293,7 @@ function calculate(form) {
 <tr>
 <td>BWFN</sub></td>
 <td>= 115/(C<sub>λ</sub>*√(n*S))</td>
-<td><input id="outputBWFN" style='font-size:105%' type="number" size=10 value="10000" disabled></td>
+<td><input id="outputBWFN" style='font-size:105%' type="number" size=10 disabled></td>
 <td>deg</td>
 <td>First null beamwidth</td>
 </tr>
